<resources>
    <string name="app_name">lab3</string>
    <string name="pass">Password</string>
    <string name="auth">Auth</string>
    <string name="connect">Connect</string>
    <string name="authentication">Authentication</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="repeat">Repeat</string>
    <string name="register">Register</string>
    <string name="create_game_label">Or create your own game and share generated ID</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="id_dots">Id...</string>
    <string name="join_game_label">Join generated game by ID</string>
    <string name="remember">Remember</string>
    <string name="fire">Fire!</string>
    <string name="ready">Ready</string>
    <string name="rotate">Rotate on Drag</string>
    <string name="change_name">Change name</string>
    <string name="enter_name">Enter name...</string>
    <string name="change_image">Change Image</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="history">History</string>
    <string name="change">Change</string>
    <string name="upload_image">Upload image</string>
    <string name="use_gravatar">Use Gravatar</string>
    <string name="opponent">Opponent:</string>
    <string name="yes">Ok</string>
    <string name="error">Error! Game cannot be continued.</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost :(</string>
    <string name="exit_game">Do you really want to leave? Game is not ended.</string>
    <string name="no">No</string>
    <string name="versus">Versus:</string>
    <string name="destroyed_ships">Destroyed ships:</string>
    <string name="started">Started</string>
    <string name="ended">Ended</string>
    <string name="shots_hits">Hits/Shots:</string>
</resources>