<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/user_editname_apply"
            android:layout_marginEnd="10dp"
            android:text="@string/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/user_editname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enter_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/user_gravatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_gravatar" />
        <Button
            android:id="@+id/user_editimage"
            android:layout_marginStart="10dp"
            android:text="@string/upload_image"
            style="@style/game_lobby_button" />
    </LinearLayout>
    <ImageView
        android:id="@+id/user_image"
        android:layout_width="match_parent"
        android:layout_height="480dp" />
</LinearLayout>